testdata/typechecker/ok/NestedVars2.java
int main() {
        if (3 < 4) {
            int x;
            x = 5;
        } else {
            boolean x;
            x = true;
        }
    	return 0;
}

