testdata/typechecker/error/BoolTest-err.java
int main() {
            boolean x;
            x = 3; // TE 
		return 0;
}

